fixed meal description text overflow

--- a/src/components/MenuMeal/MenuMeal.module.css
+++ b/src/components/MenuMeal/MenuMeal.module.css
@@ -61,6 +61,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
 }
 
 .meal_container .meal_footer {
